gitops/apps/syncthing/svc-sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
  namespace: apps
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: sync-udp
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
