gitops/apps/syncthing/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: http
      protocol: TCP
